# r

./: .gitignore  Cargo.toml  README.md  feeds
nix/: flake.nix
nix/shell/: default.nix
src/: article.rs  atom.rs  content.rs  feed.rs  feed_parser.rs  item_ext.rs  main.rs  rss.rs  url_ext.rs
