[dependencies]
anyhow = "1.0.98"
atom_syndication = "0.12.7"
dom_smoothie = "0.11.0"
futures-lite = "2.6.0"
rss = "2.0.12"
serde = {version = "1.0.219", features = ["serde_derive"]}
serde_json = "1.0.140"
smol = "2.0.2"
surf = "2.3.2"
url = { version = "2.5.4", default-features = false, features = ["std", "serde"] }

[package]
name = "r"
version = "0.1.0"
edition = "2024"


[profile.release]
strip = "debuginfo"
lto = true
opt-level = "z"
codegen-units = 1
