[dependencies]
atom_syndication = {version = "0.12.7", default-features = false}
rss = {version = "2.0.12", default-features = false}
serde = {version = "1.0.219", default-features = false, features = ["serde_derive"]}
serde_json = {version = "1.0.140", default-features = false, features = ["std"]}
thiserror = { version = "2.0.12", default-features = false }
url = { version = "2.5.4", default-features = false, features = ["std", "serde"] }

[package]
name = "r"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = "debuginfo"
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
